--- a/Sistema Nervoso/slide_2.html
+++ b/Sistema Nervoso/slide_2.html
@@ -16,6 +16,7 @@
         }
 
         #text {
+            line-height: 160%;
             font-size: 1.5rem;
             text-align: center;
             align-self: center;
@@ -91,7 +92,7 @@
         
         <div id="image-container">
             <div class="label snc">il sistema nervoso centrale<br>SNC</div>
-            <img src="Immagine1.png" alt="Sistema Nervoso">
+            <img src="img_2.png" alt="Sistema Nervoso">
             <div class="label snp">sistema nervoso periferico<br>SNP</div>
         </div>
 
