--- a/Sistema Nervoso/Introduzione.html
+++ b/Sistema Nervoso/Introduzione.html
@@ -30,6 +30,7 @@
             padding: 5%;
         }
         #text {
+            line-height: 130%;
             font-size: 1.5rem;
             font-weight: bold;
             color: white;
