--- a/Sistema Nervoso/slide_3.html
+++ b/Sistema Nervoso/slide_3.html
@@ -28,7 +28,7 @@
             text-align: left;
             margin-bottom: 20px;
         }
-        
+
         #text2 {
             margin-top: 15%;
             width: 30vw;
@@ -81,7 +81,7 @@
             <p id="text2">
                 Ora vediamoli piu’ nel dettaglio...
             </p>
-            <img id="cervellino" src="img_3C.png" alt="CIAOO CERVELLINOOO!!!">
+            <img id="cervellino" src="img_C.png" alt="CIAOO CERVELLINOOO!!!">
         </div>
             
         <div id="image-container">
@@ -89,15 +89,7 @@
         </div>
     </div>
 
-    <!-- Navigation Buttons -->
-    <div class="buttons">
-        <button class="button" onclick="location.href='slide_2.html';" target="content-frame">
-            Indietro
-        </button>
-        <button class="button" onclick="location.href='slide_4.html';" target="content-frame">
-            Avanti
-        </button>
-    </div>
+
 
 </body>
 </html>
