--- a/Sistema Nervoso/slide_3.html
+++ b/Sistema Nervoso/slide_3.html
@@ -12,7 +12,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            padding: 10vw;
+            
             transform: translateY(-4vh);
         }
 
@@ -27,6 +27,7 @@
             max-width: 70%;
             text-align: left;
             margin-bottom: 20px;
+            transform: translate(10%, 8%);
         }
 
         #text2 {
@@ -89,7 +90,15 @@
         </div>
     </div>
 
-
+    <!-- Navigation Buttons -->
+    <div class="buttons">
+        <button class="button" onclick="location.href='slide_2.html';" target="content-frame">
+            Indietro
+        </button>
+        <button class="button" onclick="location.href='slide_4.html';" target="content-frame">
+            Avanti
+        </button>
+    </div>
 
 </body>
 </html>
