--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 <div class="item">
                     <a class="sub-btn">Sistema Nervoso<i class="fas fa-angle-right dropdown"></i></a>
                     <div class="sub-menu">
-                        <a href="Sistema Nervoso/Introduzione1.html" target="content-frame" class="sub-item">Introduzione</a>
-                        <a href="Sistema Nervoso/Introduzione2.html" target="content-frame" class="sub-item">I Due Sistemi</a>
-                        <a href="Sistema Nervoso/Introduzione3.html" target="content-frame" class="sub-item">Sistema Nervoso Centrale</a>
-                        <a href="Sistema Nervoso/Encefalo.html" target="content-frame" class="sub-item">Encefalo</a>
-                        <a href="Sistema Nervoso/SistemaNervosoPeriferico.html" target="content-frame" class="sub-item">Sistema Nervoso Periferico</a>
-                        <a href="Sistema Nervoso/SistemaCompleto.html" target="content-frame" class="sub-item">Sistema Nervoso</a>
-                        <a href="Sistema Nervoso/Neuroni.html" target="content-frame" class="sub-item">Neuroni</a>
+                        <a href="Sistema Nervoso/principale.html" target="content-frame" class="sub-item">Introduzione</a>
+                        <a href="Sistema Nervoso/slide_2.html" target="content-frame" class="sub-item">I Due Sistemi</a>
+                        <a href="Sistema Nervoso/slide_3.html" target="content-frame" class="sub-item">Sistema Nervoso Centrale</a>
+                        <a href="Sistema Nervoso/slide_4.html" target="content-frame" class="sub-item">Encefalo</a>
+                        <a href="Sistema Nervoso/slide_5.html" target="content-frame" class="sub-item">Sistema Nervoso Periferico</a>
+                        <a href="Sistema Nervoso/slide_6.html" target="content-frame" class="sub-item">Sistema Nervoso</a>
+                        <a href="Sistema Nervoso/slide_7.html" target="content-frame" class="sub-item">Neuroni</a>
                     </div>
                 </div>
                 <div class="item">
