--- a/Sistema Nervoso/slide_6.html
+++ b/Sistema Nervoso/slide_6.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../slide_Dim.css">
+    <link rel="stylesheet" href="styleNerv.css">
+
     <title>Il Sistema Nervoso</title>
     <style>
         body {
@@ -15,70 +17,72 @@
             text-align: justify;
             position: relative; 
         }
-        #container {
-            width: 80%;
-            margin: auto;
+        #slide6_container {
+            width: 90%;
+            margin: 4%;
+            display: flex;
+            flex-direction: row;
+        }
+        #cloud {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            justify-content: end;
+        }
+        #cloud p {
+            border: 2px solid black;
+            background: radial-gradient(circle, #e0b94e, #ffbb00e7);
+            color: #000000;
+            border-radius: 100%;
+            width: 25vw;
+            height: 20vh;
+            padding: 15%;
+            font-size: 1.6rem;
+            transform: translate(10%, 13%);
+
+        }
+
+        #cervellino {
+            width: 20vw;
+            transform: translate(50%, 5%);
+        }
+
+        #image-container {
+            text-align: center;            
+        }
+        #image-container img{
+            width: 60vw;
         }
         h1 {
             color: red;
             text-align: center;
         }
-        .image-container {
-            text-align: center;
-            margin: 20px 0;
-        }
-        img {
-            width: 60%; 
-            height: auto;
-            border: 2px solid #fff; 
-        }
-        .buttons {
-            position: fixed;
-            bottom: 20px;
-            width: 96%;
-            display: flex;
-            justify-content: space-between;
-            padding: 0 20px;
-        }
-        .button {
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: white;
-            background-color: #900000;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-            transition: background 0.3s, transform 0.2s;
-        }
-        .button:hover {
-            background-color: #b00000;
-            transform: scale(1.05);
-        }
+
     </style>
 </head>
 <body>
 
-    <div id="container" class="slide_container_Dim">
-        <h1>IL SISTEMA NERVOSO</h1>
-        <p style="text-align:center;">
-            <strong>Ripetiamo bene...</strong>
-        </p>
-        <p>
-            Questa slide offre una panoramica visiva del sistema nervoso, 
-            evidenziandone la suddivisione, le principali funzioni e i collegamenti 
-            tra le varie parti del corpo.
-        </p>
+    <div id="slide6_container" class="slide_container_Dim">
+        <div id="cloud">
+            <p style="text-align:center;">
+                <strong>Ripetiamo bene...</strong>
+            </p>
+            <img id="cervellino" src="img_C.png" alt="CIAOO CERVELLINOOO!!!">
+        </div>
         
-        <div class="image-container">
+        <div id="image-container">
             <img src="SistemaCompleto.png" alt="Schema del sistema nervoso">
         </div>
     </div>
 
+    <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='SistemaNervosoPeriferico.html';">Indietro</button>
-        <button class="button" onclick="location.href='Neuroni.html';">Avanti</button>
+        <button class="button" onclick="location.href='slide_5.html';" target="content-frame">
+            Indietro
+        </button>
+        <button class="button" onclick="location.href='slide_7.html';" target="content-frame">
+            Avanti
+        </button>
     </div>
 
 </body>
