--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="item">
                     <a class="sub-btn">Sistema Nervoso<i class="fas fa-angle-right dropdown"></i></a>
                     <div class="sub-menu">
-                        <a href="Sistema Nervoso/principale.html" target="content-frame" class="sub-item">Introduzione</a>
+                        <a href="Sistema Nervoso/Introduzione.html" target="content-frame" class="sub-item">Introduzione</a>
                         <a href="Sistema Nervoso/slide_2.html" target="content-frame" class="sub-item">I Due Sistemi</a>
                         <a href="Sistema Nervoso/slide_3.html" target="content-frame" class="sub-item">Sistema Nervoso Centrale</a>
                         <a href="Sistema Nervoso/slide_4.html" target="content-frame" class="sub-item">Encefalo</a>
