--- a/Respiratorio/Introduzione.html
+++ b/Respiratorio/Introduzione.html
@@ -4,78 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../slide_Dim.css">
+    <link rel="stylesheet" href="styleResp.css">
     <title>Apparato Respiratorio</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background: url('introduzione.png') no-repeat center center fixed;
-            background-size: 1950px 950px;
+            font-family: Urbanist, sans-serif;
+            background-image: url(Introduzione.png);
+            background-repeat: repeat;
+            background-position: center;
+            background-attachment: fixed;
+            background-size: cover;
+            background-size: 75%;
+        }
+        #slide_container {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            position: relative;
+            justify-content: space-evenly;
         }
-        .title {
-            font-size: 3.5rem;
+        #title {
+            font-size: 3.4rem;
             font-weight: bold;
-            color: white;
+            color: rgb(32, 56, 100);
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-            position: absolute;
             top: 20px;
             right: 20px;
+            padding: 5%;
+            transform: translate(0%, -10%);
         }
-        .text {
+        #text {
+
+            color: white;
+            padding: 10%;
+            border-radius: 10px;
+            width: 50vw;
+            transform: translate(-17%, -50%);
+            
+        }
+        #text p{
             font-size: 1.5rem;
             font-weight: bold;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.6);
-            padding: 20px;
-            border-radius: 10px;
-            max-width: 80%;
+            text-align: center;            
         }
-        .buttons {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-        }
-        .button {
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: white;
-            background-color: #900000;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-            transition: background 0.3s, transform 0.2s;
-        }
-        .button:hover {
-            background-color: #b00000;
-            transform: scale(1.05);
-        }
+
     </style>
 </head>
 <body>
 
-    <div class="slide_container_Dim">
-        <div class="title">
+    <div id="slide_container" class="slide_container_Dim">
+        <div id="title">
             Apparato Respiratorio
         </div>
-        <div class="text">
-            L'apparato respiratorio è responsabile dello scambio di ossigeno e anidride carbonica, 
-            garantendo la corretta ossigenazione del sangue e il mantenimento dell'omeostasi.
+        <div id="text">
+            <p>
+                L'apparato respiratorio è responsabile dello scambio di ossigeno e anidride carbonica, 
+                garantendo la corretta ossigenazione del sangue e il mantenimento dell'omeostasi.
+            </p>
         </div>
     </div>
 
+    <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='Respirazione.html';">Avanti</button>
+        <button class="button" style="visibility: hidden;" target="content-frame">
+            Indietro
+        </button>
+        <button class="button" onclick="location.href='slide_2.html';" target="content-frame">
+            Avanti
+        </button>
     </div>
-
 </body>
 </html>
