--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     <a class="sub-btn">Apparato Respiratorio<i class="fas fa-angle-right dropdown"></i></a>
                     <div class="sub-menu">
                         <a href="Respiratorio/Introduzione.html" target="content-frame" class="sub-item">Introduzione</a>
-                        <a href="Respiratorio/Respirazione.html" target="content-frame" class="sub-item">La Respirazione</a>
-                        <a href="Respiratorio/Apparato_respiratorio.html" target="content-frame" class="sub-item">Apparato Respiratorio</a>
-                        <a href="Respiratorio/Albero_bronchiale.html" target="content-frame" class="sub-item">Albero Bronchiale</a>
-                        <a href="Respiratorio/Fasi_respirazione.html" target="content-frame" class="sub-item">Fasi Respirazione</a>
+                        <a href="Respiratorio/slide_2.html" target="content-frame" class="sub-item">La Respirazione</a>
+                        <a href="Respiratorio/slide_3.html" target="content-frame" class="sub-item">Apparato Respiratorio</a>
+                        <a href="Respiratorio/slide_4.html" target="content-frame" class="sub-item">Albero Bronchiale</a>
+                        <a href="Respiratorio/slide_5.html" target="content-frame" class="sub-item">Fasi Respirazione</a>
                     </div>
                 </div>
                 <div class="item">
