--- a/quiz.html
+++ b/quiz.html
@@ -97,7 +97,7 @@
     <script>
         const questions = [
             {
-                question: " culo componenti del sistema cardiocircolatorio?",
+                question: "componenti del sistema cardiocircolatorio?",
                 options: ["Il cuore, il sangue e i vasi sanguigni", "I polmoni, il cuore e i reni", "Il midollo osseo, i linfonodi e il fegato."],
                 correct: 0
             },
