--- a/Sistema Nervoso/slide_4.html
+++ b/Sistema Nervoso/slide_4.html
@@ -10,8 +10,9 @@
         #slide4_container {
             display: flex;
             flex-direction: row;
-            width: 80%;
-            margin: 5%;
+            width: 80vw;
+            height: 100vh;
+            margin: 0%;
         }
         #col1 {
             display: flex;
