--- a/Apparato Circolatorio/cuore_2.html
+++ b/Apparato Circolatorio/cuore_2.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../slide_Dim.css">
     <title>Il Cuore</title>
     <style>
         body {
@@ -18,9 +17,9 @@
             align-items: center;
             justify-content: flex-start;
         }
-        #content{
+        .content{
             text-align: start;
-            padding: 20px 20px 0px 20px;
+            padding: 20px 20px 50px 20px;
             flex-direction: row;
             display: flex;
         }
@@ -93,27 +92,12 @@
     </style>
 </head>
 <body>
-    <div id="content" class="slide_container_Dim">
+    <div class="content">
         <div class="text">
             <p>
-                Organo fondamentale che fa circolare il sangue nei vasi. Esso scorre in due direzioni diverse e cioè dal cuore alla periferia nelle
-                arterie e dal cuore alla periferia nelle vene.
-            </p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p>
-                Il cuore è diviso in due parti, destra e sinistra che non possono comunicare fra loro.
-                A destra circola solo sangue venoso ricco di anidride carbonica, a sinistra invece circola sangue arterioso ricco di ossigeno.
-            </p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p>
-                Il cuore dopo che ha ricevuto il sangue da tutto il corpo, per poter spingere il sangue nelle arterie,
-                si deve contrarre continuamente in modo ritmico, senza il bisogno di essere stimolato dalla nostra volontà.
+                A destra passa solo sangue ricco di anidride carbonica, 
+                riceve dalle vene cave il sangue povero di ossigeno che dovrà andare ad ossigenarsi nei polmoni,
+                a sinistra solo sangue ricco di ossigeno, che proviene dai polmoni attraverso le vene polmonari e verrà distribuito a tutte le cellule.
 
             </p>
             <br>
@@ -121,8 +105,8 @@
             <br>
             <br>
             <p>
-                Questo processo si chiama ciclo cardiaco e consiste di due fasi e da una brevissima pausa. 
-                Le due fasi si chiamano diastole (dilatazione) e sistole (contrazione).
+                Ciascuna metà a sua volta è divisa in due parti: una superiore, detta atrio e una inferiore, detta ventricolo.
+                La parte superiore comunica con quella inferiore attraverso delle valvole che permettono al sangue di andare solo dall'atrio al ventricolo e non viceversa.
             </p>
         </div>
         <br>
@@ -131,7 +115,7 @@
         </div>
     </div>
     <div class="buttons">
-        <button class="button" onclick="location.href='vasi_sanguigni.html';" target="content-frame">Indietro</button>
+        <button class="button" onclick="location.href='cuore.html';" target="content-frame">Indietro</button>
         <button class="button" onclick="location.href='cuore_2.html';" target="content-frame">Avanti</button>
     </div>
     
