--- a/Apparato_Digerente/slide_9.html
+++ b/Apparato_Digerente/slide_9.html
@@ -160,7 +160,7 @@
         <button class="button" onclick="location.href='slide_8.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_quiz.html';" target="content-frame">
+        <button class="button" onclick="location.href='../fine.html';" target="content-frame">
             Avanti
         </button>
     </div>
