--- a/Sistema Nervoso/slide_7.html
+++ b/Sistema Nervoso/slide_7.html
@@ -155,7 +155,7 @@
         <button class="button" onclick="location.href='slide_6.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='fine.html';" target="content-frame">
+        <button class="button" onclick="location.href='../fine.html';" target="content-frame">
             Avanti
         </button>
     </div>
