--- a/Apparato Circolatorio/cuore_2.html
+++ b/Apparato Circolatorio/cuore_2.html
@@ -116,7 +116,7 @@
     </div>
     <div class="buttons">
         <button class="button" onclick="location.href='cuore.html';" target="content-frame">Indietro</button>
-        <button class="button" onclick="location.href='cuore_2.html';" target="content-frame">Avanti</button>
+        <button class="button" onclick="location.href='../fine.html';" target="content-frame">Avanti</button>
     </div>
     
 </body>
