--- a/fine.html
+++ b/fine.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fine Capitolo</title>
+    <style>
+        body {
+            overflow: visible;
+            background-image: url(sfondo_fine_quiz.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
+            background-size:contain;
+        }
+
+        /*BOTTONIIII*/
+        .buttons {
+            position: fixed;
+            bottom: 25px;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+        .button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            font-weight: bold;
+            color: white;
+            background-color: #900000;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            transition: background 0.3s, transform 0.2s;
+        }
+        .button:hover {
+            background-color: #b00000;
+        }
+        .buttons button:nth-child(1) {
+            transform: translateX(30px);
+        }
+        .buttons button:nth-child(1):hover {
+            transform: translateX(30px) scale(1.05);
+        }
+        .buttons button:nth-child(2) {
+            transform: translateX(-30px);
+        }
+        .buttons button:nth-child(2):hover {
+            transform: translateX(-30px) scale(1.05);
+        }
+
+    </style>
 </head>
 <body>
+
+        <!-- Navigation Buttons -->
+        <div class="buttons">
+            <button class="button" style="visibility: hidden;" onclick="location.href='Introduzione.html';" target="content-frame">
+                Indietro
+            </button>
+            <button class="button" onclick="location.href='slide_3.html';" target="content-frame">
+                Prossimo Argomento
+            </button>
+        </div>
     
 </body>
 </html>
