--- a/Apparato Circolatorio/introduzione2.html
+++ b/Apparato Circolatorio/introduzione2.html
@@ -132,7 +132,7 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="button" onclick="location.href='introduzione1.html';">Indietro</button>
+            <button class="button" onclick="location.href='introduzione_1.html';">Indietro</button>
             <button class="button" onclick="location.href='sangue.html';">Avanti</button>
         </div>
     </div>
