--- a/Apparato Circolatorio/introduzione1.html
+++ b/Apparato Circolatorio/introduzione1.html
@@ -36,30 +36,7 @@
             color: #3d3d3d;
             text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
         }
-        .buttons {
-            position: absolute;
-            bottom: 25px;
-            right: 30px;
-            width: 100%;
-            display: flex;
-            justify-content: end;
-        }
-        .button {
-            padding: 10px 20px;
-            font-size: 1rem;
-            font-weight: bold;
-            color: white;
-            background-color: #900000;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-            transition: background 0.3s, transform 0.2s;
-        }
-        .button:hover {
-            background-color: #b00000;
-            transform: scale(1.05);
-        }
+
     </style>
 </head>
 <body>
@@ -68,9 +45,15 @@
             Il Sistema<br>
             Cardiocircolatorio
         </div>
-        <div class="buttons">
-            <button class="button" onclick="location.href='introduzione2.html';" target="content-frame">Avanti</button>
-        </div>
+    <!-- Navigation Buttons -->
+    <div class="buttons">
+        <button class="button" style="visibility: hidden;" target="content-frame">
+            Indietro
+        </button>
+        <button class="button" onclick="location.href='introduzione2.html';" target="content-frame">
+            Avanti
+        </button>
+    </div>
     </div>
 
 </body>
