--- a/fine.html
+++ b/fine.html
@@ -7,7 +7,7 @@
     <style>
         body {
             overflow: visible;
-            background-image: url(sfondo_fine_quiz.png);
+            background-image: url(sfondo_fine_quiz_higher.png);
             background-repeat: no-repeat;
             background-position: center;
             background-attachment: fixed;
@@ -20,7 +20,8 @@
             bottom: 25px;
             width: 100%;
             display: flex;
-            justify-content: space-between;
+            flex-direction: row;
+            justify-content: space-around;
         }
         .button {
             padding: 20px 30px;
