--- a/sounds_h.html
+++ b/sounds_h.html
@@ -1,5 +1,12 @@
-<audio id="clickSoundSlideButt">
+<audio id="SoundSlideButt">
     <source src="Metallic_Clank.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
-<script src="script.js"></script>
+
+
+<audio id="soundCheer">
+    <source src="crowd_cheer.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+<script src="playAudio.js"></script>
