--- a/sounds_h.html
+++ b/sounds_h.html
@@ -1,12 +1,10 @@
 <audio id="SoundSlideButt">
-    <source src="Metallic_Clank.mp3" type="audio/mpeg">
+    <source src="../Sounds/Metallic_Clank.mp3">
     Your browser does not support the audio element.
 </audio>
 
 
 <audio id="soundCheer">
-    <source src="crowd_cheer.mp3" type="audio/mpeg">
+    <source src="../Sounds/crowd_cheer.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
-
-<script src="playAudio.js"></script>
