--- a/Respiratorio/slide_5.html
+++ b/Respiratorio/slide_5.html
@@ -66,7 +66,7 @@
         <button class="button" onclick="location.href='slide_4.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='../fine.html';" target="content-frame">
+        <button class="button" onclick="location.href='fine.html';" target="content-frame">
             Avanti
         </button>
     </div>
