--- a/Apparato Circolatorio/fine.html
+++ b/Apparato Circolatorio/fine.html
@@ -82,7 +82,12 @@
                 document.body.insertAdjacentHTML("beforeend", data);
             });
     </script>
-    
+
+    <audio id="soundCheer" autoplay>
+        <source src="../Sounds/crowd_cheer_cut.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+        
 
     <!-- Navigation Buttons -->
     <div class="buttons">
