--- a/Apparato_Digerente/fine.html
+++ b/Apparato_Digerente/fine.html
@@ -82,6 +82,10 @@
                 document.body.insertAdjacentHTML("beforeend", data);
             });
     </script>
+    <audio id="soundCheer" autoplay>
+        <source src="../Sounds/crowd_cheer_cut.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>        
     
 
     <!-- Navigation Buttons -->
