--- a/Apparato Circolatorio/vasi_sanguigni.html
+++ b/Apparato Circolatorio/vasi_sanguigni.html
@@ -129,10 +129,23 @@
             </div>
         </div>
     </div>
+
+
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+
     <div class="buttons">
-        <button class="button" onclick="location.href='sangue.html';" target="content-frame">Indietro</button>
-        <button class="button" onclick="location.href='cuore.html';" target="content-frame">Avanti</button>
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'sangue.html');" target="content-frame">Indietro</button>
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'cuore.html');" target="content-frame">Avanti</button>
     </div>
     
+    <script src="../playAudio.js"></script>    
+
 </body>
 </html>
+
