--- a/Apparato_Digerente/slide_2.html
+++ b/Apparato_Digerente/slide_2.html
@@ -172,17 +172,26 @@
     </div>       
 
     
-
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
 
 <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='principale.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'principale.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_3.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_3.html');" target="content-frame">
             Avanti
         </button>
     </div>
 
+    <script src="../playAudio.js"></script>
+
 </body>
 </html>
+
