--- a/Apparato_Digerente/slide_3.html
+++ b/Apparato_Digerente/slide_3.html
@@ -131,29 +131,25 @@
 
     </div>
 
-
-
-
-
-
-
-
-
-    
-
-
-
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
 
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='slide_2.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_2.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_4.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_4.html');" target="content-frame">
             Avanti
         </button>
     </div>
 
+    <script src="../playAudio.js"></script>
 
 </body>
 </html>
