--- a/Apparato_Digerente/slide_5.html
+++ b/Apparato_Digerente/slide_5.html
@@ -108,20 +108,26 @@
             <img src="image5.png">
         </div>
 
-
-
-
-
     </div>
 
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+
     <div class="buttons">
-        <button class="button" onclick="location.href='slide_4.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_4.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_6.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_6.html');" target="content-frame">
             Avanti
         </button>
     </div>
+
+    <script src="../playAudio.js"></script>
     
 </body>
-</html>co
+</html>
