--- a/Apparato_Digerente/slide_8.html
+++ b/Apparato_Digerente/slide_8.html
@@ -61,17 +61,29 @@
     </div>
 
 
+    
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+
 
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='slide_7.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_7.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_9.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_9.html');" target="content-frame">
             Avanti
         </button>
     </div>
 
+    <script src="../playAudio.js"></script>
     
 </body>
 </html>
+
+
