--- a/Respiratorio/slide_2.html
+++ b/Respiratorio/slide_2.html
@@ -130,15 +130,26 @@
 
     </div>
 
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='Introduzione.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'Introduzione.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_3.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_3.html');" target="content-frame">
             Avanti
         </button>
     </div>
 
+    <script src="../playAudio.js"></script>
+
 </body>
 </html>
+
