--- a/Sistema Nervoso/slide_5.html
+++ b/Sistema Nervoso/slide_5.html
@@ -140,15 +140,26 @@
 
     </div>
 
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='slide_4.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_4.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_6.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_6.html');" target="content-frame">
             Avanti
         </button>
     </div>
+
+    <script src="../playAudio.js"></script>
+
 
 </body>
 </html>
