--- a/Sistema Nervoso/slide_6.html
+++ b/Sistema Nervoso/slide_6.html
@@ -75,15 +75,27 @@
         </div>
     </div>
 
+    <script>
+        fetch('../sounds_h.html')
+            .then(response => response.text())
+            .then(data => {
+                document.body.insertAdjacentHTML("beforeend", data);
+            });
+    </script>
+
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="location.href='slide_5.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_5.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="location.href='slide_7.html';" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_7.html');" target="content-frame">
             Avanti
         </button>
     </div>
 
+    <script src="../playAudio.js"></script>
+
 </body>
 </html>
+
+
