--- a/sounds_h.html
+++ b/sounds_h.html
@@ -1,7 +1,8 @@
 <audio id="SoundSlideButt">
-    <source src="../Sounds/Metallic_Clank.mp3">
+    <source src="../Sounds/click.mp3">
     Your browser does not support the audio element.
 </audio>
+
 
 
 
