--- a/Apparato_Digerente/fine.html
+++ b/Apparato_Digerente/fine.html
@@ -94,7 +94,7 @@
             Indietro
         </button>
         <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Apparato_Digerente/principale.html');" target="content-frame">
-            Go to Quiz
+            Prossimo Argomento
         </button>
     </div>
 
