--- a/Apparato Circolatorio/fine.html
+++ b/Apparato Circolatorio/fine.html
@@ -95,7 +95,7 @@
             Indietro
         </button>
         <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Respiratorio/Introduzione.html');" target="content-frame">
-            Go to Quiz
+            Prossimo Argomento
         </button>
     </div>
 
