--- a/Respiratorio/fine.html
+++ b/Respiratorio/fine.html
@@ -98,7 +98,7 @@
             Indietro
         </button>
         <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Sistema Nervoso/Introduzione.html');" target="content-frame">
-            Go to Quiz
+            Prossimo Argomento
         </button>
     </div>
 
