--- a/Sistema Nervoso/fine.html
+++ b/Sistema Nervoso/fine.html
@@ -95,7 +95,7 @@
             Indietro
         </button>
         <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Apparato_Digerente/principale.html');" target="content-frame">
-            Go to Quiz
+            Prossimo Argomento
         </button>
     </div>
 
