--- a/Cellula/fine.html
+++ b/Cellula/fine.html
@@ -93,7 +93,7 @@
         <button class="button pulsate" style="visibility: hidden;" onclick="playAudio(); location.href='slide_2.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Cellula/introduzione.html');" target="content-frame">
+        <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Apparato Circolatorio/intoduzione1.html');" target="content-frame">
             Prossimo Argomento
         </button>
     </div>
