--- a/Motorio/slide_6.html
+++ b/Motorio/slide_6.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleLoco.css">
     <link rel="stylesheet" href="../slide_Dim.css">
-    <title>Slide3</title>
+    <title>Slide6</title>
 
     <style>
         body {
-            background-color: rgb(197, 212, 236);
-            background-image: url(slide3.png);
+            background-image: url(slide6.png);
             background-repeat: no-repeat;
             background-position: center;
             background-attachment: fixed;
             background-size:contain;
-
         }
     </style>
-
 </head>
 <body>
+
 
 
     <script>
@@ -32,16 +31,15 @@
 
     <!-- Navigation Buttons -->
     <div class="buttons">
-        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_2.html');" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_5.html');" target="content-frame">
             Indietro
         </button>
-        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'fine.html');" target="content-frame">
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_7.html');" target="content-frame">
             Avanti
         </button>
     </div>
 
     <script src="../playAudio.js"></script>
-
     
 </body>
 </html>
