--- a/Motorio/slide_2.html
+++ b/Motorio/slide_2.html
@@ -13,6 +13,7 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            padding: 5%;
         }
         #col1 {
             display: flex;
