--- a/Motorio/slide_3.html
+++ b/Motorio/slide_3.html
@@ -13,6 +13,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            padding: 10%;
         }
         #row1 {
             display: flex;
