--- a/Motorio/slide_4.html
+++ b/Motorio/slide_4.html
@@ -11,6 +11,7 @@
         #slide4_container {
             display: flex;
             flex-direction: column;
+            padding: 3%;
         }
         #row1 {
             display: flex;
