--- a/Sistema Nervoso/fine.html
+++ b/Sistema Nervoso/fine.html
@@ -94,7 +94,7 @@
         <button class="button pulsate" style="visibility: hidden;" onclick="playAudio(); location.href='slide_2.html';" target="content-frame">
             Indietro
         </button>
-        <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Apparato_Digerente/principale.html');" target="content-frame">
+        <button class="button pulsate" onclick="playSoundAndNavigate('SoundSlideButt', '../Motorio/introduzione.html');" target="content-frame">
             Prossimo Argomento
         </button>
     </div>
