--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                             <a href="Apparato_Digerente/slide_3.html" target="content-frame" class="sub-item">La Bocca e la Cavità Orale</a>
                             <a href="Apparato_Digerente/slide_4.html" target="content-frame" class="sub-item">Faringe ed Esofago</a>
                             <a href="Apparato_Digerente/slide_5.html" target="content-frame" class="sub-item">Lo Stomaco</a>
-                            <a href="Apparato_Digerente/slide_6.html" target="content-frame" class="sub-item">L'Intestino Tenue 1</a>
-                            <a href="Apparato_Digerente/slide_7.html" target="content-frame" class="sub-item">L'Intestino Tenue 2</a>
+                            <a href="Apparato_Digerente/slide_6.html" target="content-frame" class="sub-item">L'Intestino Tenue (1)</a>
+                            <a href="Apparato_Digerente/slide_7.html" target="content-frame" class="sub-item">L'Intestino Tenue (2)</a>
                             <a href="Apparato_Digerente/slide_8.html" target="content-frame" class="sub-item">L'Intestino Crasso</a>
                             <a href="Apparato_Digerente/slide_9.html" target="content-frame" class="sub-item">Fegato, Cistifelea e Pancreas</a>
                         </div>
