--- a/quiz.html
+++ b/quiz.html
@@ -11,28 +11,35 @@
             color: #fff;
             text-align: center;
             margin: 0;
-            padding: 0;
-            width: 90vw;
+            padding: 50px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
         }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
         .container {
             background: #2d3436;
             border-radius: 15px;
             padding: 40px;
             width: 90%;
             max-width: 700px;
-            margin: 50px auto;
+            /*margin: 50px auto;*/
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
             animation: fadeIn 1s ease-in-out;
             position: relative;
         }
+
         h2 {
             margin-bottom: 30px;
             font-size: 28px;
         }
+
         .options button, .action-btn {
             display: block;
             width: 100%;
@@ -46,17 +53,21 @@
             color: white;
             transition: transform 0.2s, background 0.3s;
         }
+
         .options button:hover, .action-btn:hover {
             transform: scale(1.05);
             background-color: #74b9ff;
         }
+
         #quiz-container {
             display: none;
         }
+
         #next-btn, #restart-btn {
             display: none;
             background-color: #0984e3;
         }
+
         /* Pulsante reset in basso a destra */
         #reset-btn {
             position: fixed;
@@ -72,10 +83,12 @@
             opacity: 0.7;
             transition: opacity 0.3s, transform 0.2s;
         }
+
         #reset-btn:hover {
             opacity: 1;
             transform: scale(1.1);
         }
+
         #scoreboard {
             margin-top: 20px;
             font-size: 18px;
@@ -221,20 +234,20 @@
         function shuffleArray(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 let j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]]; 
+                [array[i], array[j]] = [array[j], array[i]]; // Scambia elementi
             }
         }
 
         function loadQuestion() {
             const currentQuestion = selectedQuestions[currentQuestionIndex];
 
-            
+            // Creiamo un array di opzioni con il loro stato corretto/sbagliato
             let options = currentQuestion.options.map((option, index) => ({
                 text: option,
-                isCorrect: index === currentQuestion.correct
+                isCorrect: index === currentQuestion.correct // Memorizziamo se è la risposta giusta
             }));
 
-            shuffleArray(options);
+            shuffleArray(options); // Mescola le risposte
 
             quizQuestion.textContent = currentQuestion.question;
             quizOptions.innerHTML = "";
@@ -250,6 +263,7 @@
         function checkAnswer(selectedIndex, button) {
             const currentQuestion = selectedQuestions[currentQuestionIndex];
 
+            // Trova l'elemento corretto nel DOM
             let correctButton;
             document.querySelectorAll("#quiz-options button").forEach((btn, index) => {
                 if (btn.textContent === currentQuestion.options[currentQuestion.correct]) {
