--- a/crediti.html
+++ b/crediti.html
@@ -35,7 +35,7 @@
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
             width: 90%;
             max-width: 900px;
-            overflow-x: auto; /* Attiva lo scroll orizzontale */
+            overflow-x: auto;
             animation: fadeIn 0.8s ease-in-out;
         }
 
@@ -53,9 +53,9 @@
             display: flex;
             gap: 20px;
             justify-content: flex-start;
-            flex-wrap: nowrap; /* Impedisce il ritorno a capo */
+            flex-wrap: nowrap;
             padding: 20px;
-            overflow-x: auto; /* Impedisce la sparizione dei partecipanti con scroll orizzontale */
+            overflow-x: auto;
         }
 
         /* Stile card */
