--- a/home.html
+++ b/home.html
@@ -166,7 +166,7 @@
                 
             </div>
 
-            <a href="pagina-successiva.html" class="button">Inizia l'esplorazione 🚀</a>
+            <a class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'slide_2.html');" target="content-frame">Inizia l'esplorazione 🚀</a>
         </div>
 
         <!-- Sezione con illustrazione e vignetta -->
