--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                     </div>
 
-                    <div class="item"><a href="quiz3def.html" target="content-frame">Quiz</a></div>
+                    <div class="item"><a href="quiz.html" target="content-frame">Quiz</a></div>
 
                 </div>
         
